--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "visualjs2",
   "version": "0.0.1",
   "description": "Javascript lib",
-  "main": ".program_instance/index.html",
+  "main": ".src/index.html",
   "dependencies": {
     "@types/matter-js": "^0.10.0",
     "@types/react": "^16.3.1",
@@ -35,6 +35,8 @@
     "webpack-cli": "^2.0.13"
   },
   "scripts": {
+    "build":"webpack",
+    "dev":"webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Nikola Lukic",
