--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
     "webpack-cli": "^2.0.13"
   },
   "scripts": {
-    "build":"webpack",
-    "dev":"webpack",
+    "build": "webpack --config webpack.config.js",
+    "dev": "webpack --config webpack.config.js",
+    "fix": "tslint -c tslint.json 'src/**/*.ts' --fix",
+    "tslint": "tslint -c tslint.json 'src/**/*.ts'",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Nikola Lukic",
