--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "jsdoc": "^3.5.5",
     "matter-attractors": "^0.1.6",
     "matter-js": "^0.14.1",
+    "node-static": "^0.7.11",
     "npm": "^5.8.0",
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
     "tsconfig": "^7.0.0",
-    "tslint": "^5.9.1"
+    "tslint": "^5.9.1",
+    "websocket": "^1.0.28"
   },
   "devDependencies": {
     "awesome-typescript-loader": "^4.0.1",
