--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jsdoc": "^3.5.5",
     "matter-attractors": "^0.1.6",
     "matter-js": "^0.14.1",
+    "mongodb": "^3.1.8",
     "node-static": "^0.7.11",
     "npm": "^5.8.0",
     "react": "^16.3.0",
@@ -40,6 +41,7 @@
     "build": "webpack --config webpack.config.js",
     "dev": "webpack --config webpack.config.js",
     "rtc": "node ./server/rtc/server.ts",
+    "database": "node ./server/database/base.ts",
     "fix": "tslint -c tslint.json 'src/**/*.ts' --fix",
     "tslint": "tslint -c tslint.json 'src/**/*.ts'",
     "test": "echo \"Error: no test specified\" && exit 1"
