--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,9 +6,15 @@
   "configurations": [
     {
       "type": "node",
+      "request": "attach",
+      "name": "Attach",
+      "port": 9229
+    },
+    {
+      "type": "node",
       "request": "launch",
       "name": "Launch Program",
-      "program": "${workspaceFolder}/src\\libs\\types\\global.ts",
+      "program": "${workspaceFolder}/server\\database\\base.js",
       "outFiles": [
         "${workspaceFolder}/**/*.js"
       ]
