--- a/package.json
+++ b/package.json
@@ -41,8 +41,9 @@
     "build": "webpack --config webpack.config.js",
     "dev": "webpack --config webpack.config.js",
     "rtc": "node ./server/rtc/server.ts",
-    "database": "node ./server/database/base.ts",
-    "datadebug": "node --inspect=27017 ./server/database/base.ts",
+    "database": "node ./server/database/base.js",
+    "datadebug": "node --inspect=27017 ./server/database/base.js",
+    "dataserver": "mongod --dbpath ./server/database/data",
     "fix": "tslint -c tslint.json 'src/**/*.ts' --fix",
     "tslint": "tslint -c tslint.json 'src/**/*.ts'",
     "test": "echo \"Error: no test specified\" && exit 1"
