--- a/package.json
+++ b/package.json
@@ -5,12 +5,10 @@
   "main": ".src/index.html",
   "dependencies": {
     "@types/matter-js": "^0.10.0",
-    "@types/react": "^16.3.1",
-    "@types/react-dom": "^16.0.4",
     "awesome-typescript-loader": "^4.0.1",
     "eslint": "^4.19.1",
+    "gmail-send": "^1.2.14",
     "imagemin-webpack-plugin": "^2.1.1",
-    "jsdoc": "^3.5.5",
     "matter-attractors": "^0.1.6",
     "matter-js": "^0.14.1",
     "mongodb": "^3.1.8",
