--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@types/matter-js": "^0.10.0",
     "awesome-typescript-loader": "^4.0.1",
     "eslint": "^4.19.1",
+    "express": "^4.16.4",
     "gmail-send": "^1.2.14",
     "imagemin-webpack-plugin": "^2.1.1",
     "matter-attractors": "^0.1.6",
@@ -16,6 +17,7 @@
     "npm": "^5.8.0",
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
+    "socket.io": "^2.1.1",
     "tsconfig": "^7.0.0",
     "tslint": "^5.9.1",
     "websocket": "^1.0.28"
