--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": ".src/index.html",
   "dependencies": {
     "@types/matter-js": "^0.10.0",
+    "@types/node": "^10.12.0",
+    "@types/socket.io": "^1.4.38",
     "awesome-typescript-loader": "^4.0.1",
     "eslint": "^4.19.1",
     "express": "^4.16.4",
@@ -40,7 +42,7 @@
   "scripts": {
     "build": "webpack --config webpack.config.js",
     "dev": "webpack --config webpack.config.js",
-    "rtc": "node ./server/rtc/server.ts",
+    "rtc": "node ./server/rtc/server.js",
     "database": "node ./server/database/base.js",
     "datadebug": "node --inspect=27017 ./server/database/base.js",
     "dataserver": "mongod --dbpath ./server/database/data",
