Clear package file dependency !
No need for socket io

--- a/package.json
+++ b/package.json
@@ -1,17 +1,14 @@
 {
   "name": "visualjs2",
-  "version": "0.0.1",
-  "description": "This version 2 of visualjs game engine, export name lib name is visualjs2.js. Whole project is based fully dependency build. Main file is app.ts . Class ioc saves singlton instances also bind. This project is for middle level programmers.",
+  "version": "0.0.2",
+  "description": "This version 2 of visualjs game engine, export name lib name is visualjs2.js . Whole project is based fully dependency build. Main file is app.ts . Class ioc saves singlton instances also bind. In this project html and css is not priory. Based on canvas 2D. Used lib Matter.js in typescript variant. This project is for middle level programmers.",
   "main": ".src/index.html",
   "dependencies": {
     "@types/matter-js": "^0.10.0",
     "@types/node": "^10.12.0",
-    "@types/socket.io": "^1.4.38",
-    "awesome-typescript-loader": "^4.0.1",
     "eslint": "^4.19.1",
     "express": "^4.16.4",
     "gmail-send": "^1.2.14",
-    "imagemin-webpack-plugin": "^2.1.1",
     "matter-attractors": "^0.1.6",
     "matter-js": "^0.14.1",
     "mongodb": "^3.1.8",
@@ -19,19 +16,16 @@
     "npm": "^5.8.0",
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
-    "socket.io": "^2.1.1",
     "tsconfig": "^7.0.0",
     "tslint": "^5.9.1",
     "websocket": "^1.0.28"
   },
   "devDependencies": {
-    "awesome-typescript-loader": "^4.0.1",
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^0.28.11",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
-    "image-webpack-loader": "^4.2.0",
     "source-map-loader": "^0.2.3",
     "style-loader": "^0.21.0",
     "ts-loader": "^4.4.2",
