--- a/package.json
+++ b/package.json
@@ -5,17 +5,10 @@
   "main": ".src/index.html",
   "dependencies": {
     "@types/matter-js": "^0.10.0",
-    "@types/node": "^10.12.0",
-    "eslint": "^4.19.1",
     "express": "^4.16.4",
-    "gmail-send": "^1.2.14",
     "matter-attractors": "^0.1.6",
     "matter-js": "^0.14.1",
-    "mongodb": "^3.1.8",
-    "node-static": "^0.7.11",
     "npm": "^5.8.0",
-    "react": "^16.3.0",
-    "react-dom": "^16.3.0",
     "tsconfig": "^7.0.0",
     "tslint": "^5.9.1",
     "websocket": "^1.0.28"
@@ -36,8 +29,8 @@
     "webpack-cli": "^2.0.13"
   },
   "scripts": {
-    "build": "webpack --config webpack.config.js",
     "dev": "webpack --config webpack.config.js",
+    "prod": "webpack --config webpack.config.js",
     "rtc": "node ./server/rtc/server.js",
     "datadebug": "node --inspect=27017 ./server/database/base.js",
     "dataserver": "mongod --dbpath ./server/database/data",
