--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ server/database/nocommit.ts
 server/database/email/nocommit.js
 server/email/mail-service.js
 server/node_modules
+server/email/mail-service.js
+server/email/mail-service.js
