--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
         "removeComments": true,
         "preserveConstEnums": true,
         "outDir": "/build/",
-        "sourceMap": true,
+        "sourceMap": false,
         "allowJs": true,
         //"noEmit": true
     },
