prepare for implementing sprite ani

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ server/database/email/nocommit.js
 server/email/mail-service.js
 server/node_modules
 server/email/mail-service.js
+src/examples/platformer/scripts/.DS_Store
