--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ server/email/mail-service.js
 server/node_modules
 server/email/mail-service.js
 src/examples/platformer/scripts/.DS_Store
+src/.DS_Store
+src/icon/.DS_Store
