--- a/package.json
+++ b/package.json
@@ -6,15 +6,19 @@
   "dependencies": {
     "@types/matter-js": "^0.10.2",
     "express": "^4.16.4",
+    "jquery": "^3.3.1",
     "matter-attractors": "^0.1.6",
     "matter-js": "^0.14.1",
     "npm": "^5.8.0",
+    "popper.js": "^1.14.3",
+    "socket.io-client": "^2.2.0",
     "tsconfig": "^7.0.0",
     "tslint": "^5.9.1",
     "websocket": "^1.0.28"
   },
   "devDependencies": {
     "clean-webpack-plugin": "^0.1.19",
+    "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^0.28.11",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
