--- a/server/package.json
+++ b/server/package.json
@@ -11,11 +11,13 @@
     "mongodb": "^3.1.8",
     "node-static": "^0.7.11",
     "npm": "^5.8.0",
+    "rtcmulticonnection-server": "^1.3.1",
     "websocket": "^1.0.28"
   },
   "devDependencies": {},
   "scripts": {
     "rtc": "node ./rtc/server.js",
+    "broadcaster": "node ./rtc/broadcaster.js",
     "dataserver": "mongod --dbpath ./database/data"
   },
   "author": {
