WIP - implementing multi-rtc3
Alias 'Broadcaster'

--- a/server/broadcaster-config.json
+++ b/server/broadcaster-config.json
@@ -8,8 +8,8 @@
   "enableLogs": "false",
   "autoRebootServerOnFailure": "false",
   "isUseHTTPs": "false",
-  "sslKey": "./fake-keys/privatekey.pem",
-  "sslCert": "./fake-keys/certificate.pem",
+  "sslKey": "./rtc/self-cert/privatekey.pem",
+  "sslCert": "./rtc/self-cert/certificate.pem",
   "sslCabundle": "",
   "enableAdmin": "false",
   "adminUserName": "username",
