--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
   "dependencies": {
     "@types/matter-js": "^0.10.2",
     "express": "^4.16.4",
+    "hacktimer": "^1.1.3",
     "jquery": "^3.3.1",
     "matter-attractors": "^0.1.6",
     "matter-js": "^0.14.1",
-    "npm": "^5.8.0",
+    "npm": "^5.10.0",
     "popper.js": "^1.14.3",
     "socket.io-client": "^2.2.0",
     "tsconfig": "^7.0.0",
