--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@types/matter-js": "^0.10.2",
     "express": "^4.16.4",
     "hacktimer": "^1.1.3",
-    "jquery": "^3.3.1",
+    "jquery": ">=3.4.0",
     "matter-attractors": "^0.1.6",
     "matter-js": "^0.14.1",
     "npm": "^5.10.0",
@@ -48,7 +48,7 @@
     "email": "zlatnaspirala@gmail.com",
     "url": "https://maximumroulette.com"
   },
-  "license": "(MIT OR GPL-3.0)",
+  "license": "(MIT , partial GPL-3.0)",
   "homepage": "https://github.com/zlatnaspirala/visual-ts-game-engie",
   "repository": {
     "type": "git",
@@ -56,6 +56,6 @@
   },
   "bugs": {
     "url": "https://github.com/zlatnaspirala/visual-ts-game-engie/issues",
-    "email": "greespiral@gmail.com"
+    "email": "zlatnaspirala@gmail.com"
   }
 }
