preparing for master - dev branch
Fixed broadcaster implementation , video chat tested on production.
Maximumroulette.com .

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ server/email/mail-service.js
 src/examples/platformer/scripts/.DS_Store
 src/.DS_Store
 src/icon/.DS_Store
+server/broadcaster-config.maximum.json
