--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "matter-js": "^0.14.1",
     "npm": "^5.10.0",
     "popper.js": "^1.14.3",
+    "script-ext-html-webpack-plugin": "^2.1.3",
     "socket.io-client": "^2.2.0",
     "tsconfig": "^7.0.0",
     "tslint": "^5.9.1",
