Prepare for game-play player video chat implementation
   - prepare session staff
   - prepare broadcaster for video chat

   game play (canvas)  implementation (not HTML tag style)

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ src/examples/platformer/scripts/.DS_Store
 src/.DS_Store
 src/icon/.DS_Store
 server/broadcaster-config.maximum.json
+server/email/mail-service.js
