--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,11 +4,18 @@
   // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
+
   {
     "type": "node",
     "request": "launch",
-    "name": "Launch Program",
+    "name": "Launch broadcaster",
     "program": "${workspaceFolder}//server\\rtc\\broadcaster.js"
+  },
+  {
+    "type": "node",
+    "request": "launch",
+    "name": "Launch server",
+    "program": "${workspaceFolder}//server\\rtc\\server.js"
   },
     {
       "type": "node",
@@ -18,14 +25,16 @@
       "address": "127.0.0.1",
       "port": 9229
     },
+    /*
     {
       "type": "node",
       "request": "launch",
-      "name": "Launch Program",
+      "name": "Launch Program rct",
       "program": "${workspaceFolder}/server\\rtc\\server.js",
       "outFiles": [
-        "${workspaceFolder}/**/*.js"
+        "${workspaceFolder}/*.js"
       ]
     }
+    */
   ]
 }
