Prepare for full server running with Platformer gameplay template

--- a/server/broadcaster-config.ori.json
+++ b/server/broadcaster-config.ori.json
@@ -7,10 +7,10 @@
   "port": "9001",
   "enableLogs": "false",
   "autoRebootServerOnFailure": "false",
-  "isUseHTTPs": "true",
-  "sslKey": "/etc/httpd/conf/ssl/maximumroulette.com.key",
-  "sslCert": "/etc/httpd/conf/ssl/maximumroulette_com.crt",
-  "sslCabundle": "/etc/httpd/conf/ssl/maximumroulette.ca-bundle",
+  "isUseHTTPs": "false",
+  "sslKey": "./rtc/self-cert/privatekey.pem",
+  "sslCert": "./rtc/self-cert/certificate.pem",
+  "sslCabundle": "",
   "enableAdmin": "false",
   "adminUserName": "username",
   "adminPassword": "password"
