--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "visualjs2",
-  "version": "0.0.3",
-  "description": "This version 2 of visualjs game engine, export name lib name is visualjs2.js . Whole project is based fully dependency build. Main file is app.ts . Class ioc saves singlton instances also bind. In this project html and css is not priory. Based on canvas 2D. Used lib Matter.js in typescript variant. This project is for middle level programmers.",
-  "main": ".src/index.html",
+  "name": "visual-ts",
+  "version": "0.1.1",
+  "description": "This version 2 of visualjs game engine supported with physics matter.js/ts library. Improved render options like set tile, play sprite animation etc.. Whole project is based fully dependency build. Main file is app.ts . Class ioc saves singlton instances also bind. In this project html and css is not priory. Based on canvas 2D. Used lib Matter.js in typescript variant. This project is for middle level programmers.",
+  "main": ".src/app.ts",
   "dependencies": {
     "@types/matter-js": "^0.10.2",
     "express": "^4.17.1",
@@ -54,7 +54,7 @@
   "homepage": "https://github.com/zlatnaspirala/visual-ts-game-engie",
   "repository": {
     "type": "git",
-    "url": "https://github.com/"
+    "url": "https://github.com/zlatnaspirala/visual-ts-game-engie"
   },
   "bugs": {
     "url": "https://github.com/zlatnaspirala/visual-ts-game-engie/issues",
