--- a/server/broadcaster-config.json
+++ b/server/broadcaster-config.json
@@ -1,7 +1,7 @@
 {
   "socketURL": "/",
   "dirPath": "",
-  "homePage": "/demos/index.html",
+  "homePage": "app.html",
   "socketMessageEvent": "RTCMultiConnection-Message",
   "socketCustomEvent": "RTCMultiConnection-Custom-Message",
   "port": "9001",
