Add message-box html template

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,11 @@
 /node_modules
 /build/
 /server/database/data
-server/database/nocommit.ts
-server/database/email/nocommit.js
-server/email/mail-service.js
-server/node_modules
-server/email/mail-service.js
-src/examples/platformer/scripts/.DS_Store
-src/.DS_Store
-src/icon/.DS_Store
-server/broadcaster-config.maximum.json
-server/email/mail-service.js
+/server/database/nocommit.ts
+/server/database/email/nocommit.js
+/server/email/mail-service.js
+/server/node_modules
+/src/examples/platformer/scripts/.DS_Store
+/src/.DS_Store
+/src/icon/.DS_Store
+/server/broadcaster-config.maximum.json
