--- a/server/broadcaster-config.ori.json
+++ b/server/broadcaster-config.ori.json
@@ -1,16 +1,16 @@
 {
-  "socketURL": "/",
-  "dirPath": "",
-  "homePage": "/demos/index.html",
+  "socketURL": "https://maximumroulette.com:9001/",
+  "dirPath": "/",
+  "homePage": "app.html",
   "socketMessageEvent": "RTCMultiConnection-Message",
   "socketCustomEvent": "RTCMultiConnection-Custom-Message",
   "port": "9001",
   "enableLogs": "false",
   "autoRebootServerOnFailure": "false",
-  "isUseHTTPs": "false",
-  "sslKey": "./rtc/self-cert/privatekey.pem",
-  "sslCert": "./rtc/self-cert/certificate.pem",
-  "sslCabundle": "",
+  "isUseHTTPs": "true",
+  "sslKey": "/etc/httpd/conf/ssl/maximumroulette.com.key",
+  "sslCert": "/etc/httpd/conf/ssl/maximumroulette_com.crt",
+  "sslCabundle": "/etc/httpd/conf/ssl/maximumroulette.ca-bundle",
   "enableAdmin": "false",
   "adminUserName": "username",
   "adminPassword": "password"
