--- a/server/broadcaster-config.json
+++ b/server/broadcaster-config.json
@@ -1,13 +1,14 @@
 {
   "socketURL": "http://localhost:9001/",
   "dirPath": "/",
-  "homePage": "",
+  "homePage": "app.html",
   "socketMessageEvent": "RTCMultiConnection-Message",
   "socketCustomEvent": "RTCMultiConnection-Custom-Message",
   "port": "9001",
   "enableLogs": "false",
   "autoRebootServerOnFailure": "false",
   "isUseHTTPs": "false",
+  "isSecure": "false",
   "sslKey": "/etc/httpd/conf/ssl/maximumroulette.com.key",
   "sslCert": "/etc/httpd/conf/ssl/maximumroulette_com.crt",
   "sslCabundle": "/etc/httpd/conf/ssl/maximumroulette.ca-bundle",
