--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": ".src/app.ts",
   "dependencies": {
     "@types/matter-js": "^0.10.2",
+    "@types/node": "^12.12.12",
     "express": "^4.17.1",
     "hacktimer": "^1.1.3",
     "jquery": ">=3.4.0",
@@ -16,6 +17,7 @@
     "socket.io-client": "^2.2.0",
     "tsconfig": "^7.0.0",
     "tslint": "^5.17.0",
+    "webrtc-adapter": "latest",
     "websocket": "^1.0.28"
   },
   "devDependencies": {
@@ -28,7 +30,7 @@
     "source-map-loader": "^0.2.3",
     "style-loader": "^0.21.0",
     "ts-loader": "^4.4.2",
-    "typedoc": "^0.14.2",
+    "typedoc": "^0.15.3",
     "typedoc-webpack-plugin": "^1.1.4",
     "typescript": "^3.5.1",
     "webpack": "^4.33.0",
