--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "visual-ts",
-  "version": "0.3.3",
-  "description": "Improved render options like set tile, play sprite animation, multiplayer coordinate etc.. Whole project is based fully dependency build. Main file is app.ts . Class ioc saves singlton instances also bind. In this project html and css is not priory. Based on canvas 2D. Used lib Matter.js in typescript variant. This project is for middle level programmers.",
+  "version": "0.3.4",
+  "description": "Improved render options like set tiles, play sprite animation, multy resource handling, multiplayer coordinate etc.. Whole project is based fully dependency build. Main file is app.ts . Class ioc saves singlton instances also bind. In this project html and css is not priory. Based on canvas 2D. Used lib Matter.js in typescript variant. This project is for middle level programmers.",
   "main": ".src/app.ts",
   "dependencies": {
     "@types/matter-js": "^0.10.7",
