--- a/server/broadcaster-config.json
+++ b/server/broadcaster-config.json
@@ -1,7 +1,7 @@
 {
-  "socketURL": "/",
+  "socketURL": "http://maximumroulette.com:9001/",
   "dirPath": "",
-  "homePage": "app.html",
+  "homePage": "https://maximumroulette.com/applications/visual-typescript-game-engine/basket-ball-chat/app.html",
   "socketMessageEvent": "RTCMultiConnection-Message",
   "socketCustomEvent": "RTCMultiConnection-Custom-Message",
   "port": "9001",
