--- a/server/broadcaster-config.json
+++ b/server/broadcaster-config.json
@@ -12,6 +12,8 @@
   "sslKey": "/etc/httpd/conf/ssl/maximumroulette.com.key",
   "sslCert": "/etc/httpd/conf/ssl/maximumroulette_com.crt",
   "sslCabundle": "/etc/httpd/conf/ssl/maximumroulette.ca-bundle",
+  "sslKeyLocahost": "server/rtc/self-cert/privatekey.pem",
+  "sslCertLocahost": "server/rtc/self-cert/certificate.pem",
   "enableAdmin": "false",
   "adminUserName": "username",
   "adminPassword": "password"
