Fix/improve running dev/prod switch func works.
  Current setup is 'dev'

"isSecure": "false", in broadcaster.json config file must be switched for localhost running to the `false` value.

 -  It means server program will load https but with localhost certs.

Removed 'isUseHTTPs' flag.

--- a/server/broadcaster-config.json
+++ b/server/broadcaster-config.json
@@ -8,12 +8,12 @@
   "enableLogs": "false",
   "autoRebootServerOnFailure": "false",
   "isUseHTTPs": "true",
-  "isSecure": "true",
+  "isSecure": "false",
   "sslKey": "/etc/httpd/conf/ssl/maximumroulette.com.key",
   "sslCert": "/etc/httpd/conf/ssl/maximumroulette_com.crt",
   "sslCabundle": "/etc/httpd/conf/ssl/maximumroulette.ca-bundle",
-  "sslKeyLocahost": "server/rtc/self-cert/privatekey.pem",
-  "sslCertLocahost": "server/rtc/self-cert/certificate.pem",
+  "sslKeyLocahost": "./rtc/self-cert/privatekey.pem",
+  "sslCertLocahost": "./rtc/self-cert/certificate.pem",
   "enableAdmin": "false",
   "adminUserName": "username",
   "adminPassword": "password"
