--- a/server/package.json
+++ b/server/package.json
@@ -6,16 +6,17 @@
   "dependencies": {
     "@types/node": "^10.17.29",
     "crypto": "^1.0.1",
-    "eslint": "^4.19.1",
     "express": "^4.17.1",
     "gmail-send": "^1.8.10",
     "mongodb": "^3.5.6",
     "node-static": "^0.7.11",
     "websocket": "^1.0.30",
-    "npm": "^6.13.4",
     "rtcmulticonnection-server": "^1.3.2"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "npm": "^6.13.4",
+    "eslint": "^4.19.1"
+  },
   "scripts": {
     "rtc": "node ./rtc/server.js",
     "broadcaster": "node ./rtc/broadcaster.js",
