[Tutorials] improved + auto format ts
 - Fixed  `roomid`  double definition

 fox next commit =>
```
 (property) KeyboardEvent.keyCode: number
@deprecated
'keyCode' is deprecated
```

--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
   },
   "scripts": {
     "dev": "webpack --config webpack.config.js",
-    "prod": "webpack --config webpack.config.js",
+    "prod": "webpack --config webpack.multicompile.config.js",
     "dev-all": "webpack --config webpack.multicompile.config.js",
     "rtc": "node ./server/rtc/server.js",
     "broadcaster": "node ./server/rtc/broadcaster.js",
