--- a/package.json
+++ b/package.json
@@ -1,42 +1,42 @@
 {
   "name": "visual-ts",
-  "version": "0.4.9",
-  "description": "Mobile controls implementation version 0.4.0 Code already works on all browsers platform , why not make a proof.",
+  "version": "0.4.11",
+  "description": "npm update, mobile controls implemented. ",
   "main": ".src/app.ts",
   "dependencies": {
     "@types/matter-js": "^0.10.9",
-    "@types/node": "^12.12.62",
+    "@types/node": "^12.20.10",
     "express": "^4.17.1",
     "hacktimer": "^1.1.3",
-    "jquery": "^3.5.1",
+    "jquery": "^3.6.0",
     "matter-attractors": "^0.1.6",
     "matter-js": "^0.14.1",
-    "mongodb": "^3.6.2",
+    "mongodb": "^3.6.6",
     "popper.js": "^1.16.1",
-    "script-ext-html-webpack-plugin": "^2.1.4",
-    "socket.io-client": "^2.3.1",
+    "script-ext-html-webpack-plugin": "^2.1.5",
+    "socket.io-client": "^2.4.0",
     "tsconfig": "^7.0.0",
-    "webrtc-adapter": "^7.7.0",
-    "websocket": "^1.0.32"
+    "webrtc-adapter": "^7.7.1",
+    "websocket": "^1.0.34"
   },
   "devDependencies": {
-    "bufferutil": "^4.0.1",
+    "bufferutil": "^4.0.3",
     "clean-webpack-plugin": "^0.1.19",
     "copy-webpack-plugin": "^5.1.2",
     "css-loader": "^3.6.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
-    "npm": "^6.14.8",
+    "npm": "^6.14.13",
     "source-map-loader": "^0.2.3",
     "style-loader": "^0.21.0",
     "ts-loader": "^4.4.2",
     "tslint": "^5.20.1",
     "typedoc": "^0.15.8",
     "typedoc-webpack-plugin": "^1.1.4",
-    "typescript": "^3.9.7",
-    "utf-8-validate": "^5.0.2",
-    "webpack": "^4.44.2",
+    "typescript": "^4.2.4",
+    "utf-8-validate": "^5.0.4",
+    "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
   },
   "scripts": {
