--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "visual-ts",
-  "version": "0.5.5",
-  "description": "New feature in 0.5.0 : First working point for `npm i visual-ts`, npm update, mobile controls implemented. Fixed links in about.",
+  "version": "0.5.6",
+  "description": "New feature in 0.5.6 : Config inject optimal arg ... First working point for `npm i visual-ts`, npm update, mobile controls implemented. Fixed links in about.",
   "main": ".src/app.ts",
   "dependencies": {
     "@types/matter-js": "^0.10.9",
