--- a/server/package.json
+++ b/server/package.json
@@ -14,8 +14,8 @@
     "rtcmulticonnection-server": "^1.3.2"
   },
   "devDependencies": {
-    "npm": "^6.13.4",
-    "eslint": "^4.19.1"
+    "eslint": "^4.19.1",
+    "npm": "^7.10.0"
   },
   "scripts": {
     "rtc": "node ./rtc/server.js",
