--- a/server/broadcaster-config.json
+++ b/server/broadcaster-config.json
@@ -1,17 +1,17 @@
 {
-  "socketURL": "http://maximumroulette.com:9001/",
-  "dirPath": "",
-  "homePage": "https://maximumroulette.com/applications/visual-typescript-game-engine/basket-ball-chat/app.html",
+  "socketURL": "https://maximumroulette.com:9001/",
+  "dirPath": "/apps/visual-ts/basket-ball-chat/",
+  "homePage": "https://maximumroulette.com/apps/visual-ts/basket-ball-chat/app.html",
   "socketMessageEvent": "RTCMultiConnection-Message",
   "socketCustomEvent": "RTCMultiConnection-Custom-Message",
   "port": "9001",
   "enableLogs": "false",
   "autoRebootServerOnFailure": "false",
   "isUseHTTPs": "true",
-  "isSecure": "false",
-  "sslKey": "/etc/httpd/conf/ssl/maximumroulette.com.key",
-  "sslCert": "/etc/httpd/conf/ssl/maximumroulette_com.crt",
-  "sslCabundle": "/etc/httpd/conf/ssl/maximumroulette.ca-bundle",
+  "isSecure": "true",
+  "sslKey": "/etc/letsencrypt/live/maximumroulette.com/privkey.pem",
+  "sslCert": "/etc/letsencrypt/live/maximumroulette.com/cert.pem",
+  "sslCabundle": "/etc/letsencrypt/live/maximumroulette.com/fullchain.pem",
   "sslKeyLocahost": "./rtc/self-cert/privatekey.pem",
   "sslCertLocahost": "./rtc/self-cert/certificate.pem",
   "enableAdmin": "false",
