Replace multiRTC2 WIP
 Still no stable  real time handling in coordinator part. Coordinator is displaced for multiRTC2 used for data stream and active navigation player or any other object.

--- a/server/coordinator-config.json
+++ b/server/coordinator-config.json
@@ -1,10 +1,10 @@
 {
-  "socketURL": "https://localhost:9001/",
+  "socketURL": "https://localhost:12034/",
   "dirPath": "/",
-  "homePage": "https://localhost/multiplayer/app.html",
+  "homePage": "https://localhost",
   "socketMessageEvent": "RTCMultiConnection-Message",
   "socketCustomEvent": "RTCMultiConnection-Custom-Message",
-  "port": "9001",
+  "port": "12034",
   "enableLogs": "false",
   "autoRebootServerOnFailure": "false",
   "isUseHTTPs": "true",
