--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "visual-ts",
-  "version": "0.5.13",
-  "description": "New feature in 0.5.13: simplified map loading procces, self hosted server part 0.1.0 synhronised. New feature in 0.5.6 : Config inject optimal arg ... First working point for `npm i visual-ts`, npm update, mobile controls implemented. Fixed links in about.",
+  "version": "0.6.0",
+  "description": "New feature in 0.6.0 : Deplaced multiRTC2 with multiRTC3, simplified map loading procces, self hosted server ver 0.2.0. Mobile controls implemented.",
   "main": ".src/app.ts",
   "dependencies": {
     "@types/matter-js": "^0.10.9",
