--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "visual-ts",
-  "version": "0.6.4",
-  "description": "export clientConfig class ref, Test for codepen npm integration (remove main entry from package). New feature in 0.6.0 : Deplaced multiRTC2 with multiRTC3, simplified map loading procces, self hosted server ver 0.2.0. Mobile controls implemented.",
+  "version": "0.6.5",
+  "description": "0.6.5 -> new class Generator - auto generator for new world objects.",
   "main": "",
   "dependencies": {
     "@types/matter-js": "^0.10.9",
