[0.5.6] Update Generator , downgrade to localhost dev setup
    this.generatorOfCollecions = new Generator({
      genType: worldElementType.RECT,
      emit: [
        { force: { x: 0.02 , y: -0.01 }},
        { force: { x: -0.02 , y: -0.01 }},
        { force: { x: 0.02 , y: -0.01 }},
        { force: { x: -0.01 , y: -0.02 }},
        { force: { x: 0.01 , y: -0.02 }},
        { force: { x: -0.01 , y: -0.02 }}
      ],
      delayForce: [
        { delta: 500, force: { x: -0.02 , y: -0.01 }},
        { delta: 1500, force: { x: 0.02 , y: -0.02 }},
        { delta: 2000, force: { x: -0.02 , y: -0.01 }},
        { delta: 500, force: { x: -0.03 , y: -0.01 }},
        { delta: 1500, force: { x: 0.03 , y: -0.02 }},
        { delta: 2000, force: { x: -0.03 , y: -0.01 }}
      ],
      counter: new Counter(0, 1, 1, "REPEAT"),
      newParamsElement: newParamsElement,
      starter: this.starter,
      destroyAfter: 3000
    });

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "visual-ts",
-  "version": "0.6.5",
-  "description": "0.6.5 -> new class Generator - auto generator for new world objects.",
+  "version": "0.6.6",
+  "description": "0.6.6 -> UPDATE Generator - auto generator for new world objects.",
   "main": "",
   "dependencies": {
     "@types/matter-js": "^0.10.9",
