--- a/server/coordinator-config.json
+++ b/server/coordinator-config.json
@@ -1,16 +1,16 @@
 {
   "socketURL": "https://localhost:12034/",
   "dirPath": "/",
-  "homePage": "https://localhost",
+  "homePage": "https://localhost/",
   "socketMessageEvent": "RTCMultiConnection-Message",
   "socketCustomEvent": "RTCMultiConnection-Custom-Message",
   "port": "12034",
   "enableLogs": "false",
   "autoRebootServerOnFailure": "false",
   "isUseHTTPs": "true",
-  "sslKey": "/etc/letsencrypt/live/maximumroulette.com/privkey.pem",
-  "sslCert": "/etc/letsencrypt/live/maximumroulette.com/cert.pem",
-  "sslCabundle": "/etc/letsencrypt/live/maximumroulette.com/fullchain.pem",
+  "sslKey": "./rtc/apache-local-cert/server.key",
+  "sslCert": "./rtc/apache-local-cert/server.crt",
+  "sslCabundle": "./rtc/apache-local-cert/server.csr",
   "enableAdmin": "false",
   "adminUserName": "username",
   "adminPassword": "password"
