--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "visual-ts",
-  "version": "0.6.18",
-  "description": "0.6.18 -> Added free service mongodb.net new optimal option for choosing database, 0.6.16 -> added background audio and jump effect for single player, 0.6.15 -> UPDATE Broadcaster , added webcam access local without networking hot fix . Added local-stream-loaded dispatch event trigger.",
+  "version": "0.6.19",
+  "description": "0.6.19 -> Adding Sound class to the ioc controller, help for generate self-singed cert, 0.6.18 -> Added free service mongodb.net new optimal option for choosing database, 0.6.16 -> added background audio and jump effect for single player, 0.6.15 -> UPDATE Broadcaster , added webcam access local without networking hot fix . Added local-stream-loaded dispatch event trigger.",
   "main": "",
   "dependencies": {
     "@types/matter-js": "^0.10.9",
