--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "matter-js": "^0.14.1",
     "mongodb": "^3.6.6",
     "popper.js": "^1.16.1",
+    "record-canvas": "^1.2.7",
     "script-ext-html-webpack-plugin": "^2.1.5",
     "socket.io-client": "^3.1.3",
     "tsconfig": "^7.0.0",
