--- a/server/coordinator-config.json
+++ b/server/coordinator-config.json
@@ -1,7 +1,7 @@
 {
   "socketURL": "https://localhost:12034/",
   "dirPath": "/",
-  "homePage": "https://localhost/",
+  "homePage": "https://localhost",
   "socketMessageEvent": "RTCMultiConnection-Message",
   "socketCustomEvent": "RTCMultiConnection-Custom-Message",
   "port": "12034",
