--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
     "crypto": "^1.0.1",
     "express": "^4.18.1",
     "gmail-send": "^1.8.14",
+    "minimist": "^1.2.6",
     "mongodb": "^3.7.3",
     "node-static": "^0.7.11",
     "rtcmulticonnection-server": "^1.3.3",
