--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "visual-ts",
-  "version": "0.6.23",
-  "description": "0.623 -> Prototype Pollution in minimist [Server] 0.6.21 -> Added record-canvas npm module, game play can be recorded to the mp4 format and with no action download after rec interval ends. 0.6.20 -> Added Sound:On/Off feature, 0.6.19 -> Adding Sound class to the ioc controller, help for generate self-singed cert, 0.6.18 -> Added free service mongodb.net new optimal option for choosing database, 0.6.16 -> added background audio and jump effect for single player, 0.6.15 -> UPDATE Broadcaster , added webcam access local without networking hot fix . Added local-stream-loaded dispatch event trigger.",
+  "version": "0.6.25",
+  "description": "2d canvas game engine based on Matter.ts 2D physics engine for the web supported with realtime communication, backend node.js/mongoDB and visual GUI tool 2d map creator/python3,  visual-ts correspondent with mongoDB [Its not only for games you have basic session staff you can use it for our standalone application], Fast `full-duplex` connections based on webRTC/socket.io/websocket [node.js], Multiplatform/Realtime multiplayer features. Video chat comes with visual-ts [standalone]. No strange logs,No need for forums just follow stackoverflow.com and wc3. Fast console log access, tracking code, No escape with eval, Fast rebuild, Build single endpoint, Rebuild all ,Luanch/Attacher debugger options implemented [for visual code], Lib is not to much `inself` closed. Every intervention or used feature is exposed in high level in that way you can make very fast implementation of your own logic what ever will be., You are not forced to use typescript you can always downgrade to javascript this comes with typescript inself, Example for multiplayer vs video chat added.",
   "main": "",
   "dependencies": {
     "@types/matter-js": "^0.10.9",
