--- a/package.json
+++ b/package.json
@@ -25,9 +25,10 @@
     "clean-webpack-plugin": "^0.1.19",
     "copy-webpack-plugin": "^5.1.2",
     "css-loader": "^3.6.0",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.11",
-    "html-webpack-plugin": "^5.5.0",
+    "html-webpack-plugin": "^5.4.0",
+    "mini-css-extract-plugin": "^2.7.2",
     "npm": "^6.14.16",
     "source-map-loader": "^0.2.3",
     "style-loader": "^0.21.0",
@@ -37,8 +38,8 @@
     "typedoc-webpack-plugin": "^1.1.4",
     "typescript": "^4.6.3",
     "utf-8-validate": "^5.0.9",
-    "webpack": "^4.46.0",
-    "webpack-cli": "^3.3.12"
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1"
   },
   "scripts": {
     "dev": "webpack --config webpack.config.js",
