--- a/package.json
+++ b/package.json
@@ -2,26 +2,26 @@
   "name": "visual-ts",
   "version": "0.7.1",
   "description": "2d canvas game engine based on Matter.ts 2D physics engine for the web supported with realtime communication, backend node.js/mongoDB and visual GUI tool 2d map creator/python3,  visual-ts correspondent with mongoDB [Its not only for games you have basic session staff you can use it for our standalone application], Fast `full-duplex` connections based on webRTC/socket.io/websocket [node.js], Multiplatform/Realtime multiplayer features. Video chat comes with visual-ts [standalone]. No strange logs,No need for forums just follow stackoverflow.com and wc3. Fast console log access, tracking code, No escape with eval, Fast rebuild, Build single endpoint, Rebuild all ,Luanch/Attacher debugger options implemented [for visual code], Lib is not to much `inself` closed. Every intervention or used feature is exposed in high level in that way you can make very fast implementation of your own logic what ever will be., You are not forced to use typescript you can always downgrade to javascript this comes with typescript inself, Example for multiplayer vs video chat added.",
-  "main": "",
+  "main": "index.ts",
   "dependencies": {
     "@types/matter-js": "^0.10.9",
     "@types/node": "^12.20.47",
     "express": "^4.17.3",
     "hacktimer": "^1.1.3",
-    "html-webpack-plugin": "^5.5.0",
     "jquery": "^3.6.0",
     "matter-attractors": "^0.1.6",
     "matter-js": "^0.14.1",
     "mongodb": "^3.7.3",
     "popper.js": "^1.16.1",
     "record-canvas": "^1.2.7",
-    "script-ext-html-webpack-plugin": "^2.1.5",
     "socket.io-client": "^4.6.1",
     "tsconfig": "^7.0.0",
     "webrtc-adapter": "^7.7.1",
     "websocket": "^1.0.34"
   },
   "devDependencies": {
+    "html-webpack-plugin": "^5.5.0",
+    "script-ext-html-webpack-plugin": "^2.1.5",
     "bufferutil": "^4.0.6",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^5.1.2",
@@ -29,7 +29,6 @@
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.11",
     "mini-css-extract-plugin": "^2.7.2",
-    "npm": "^9.4.0",
     "source-map-loader": "^0.2.3",
     "style-loader": "^0.21.0",
     "ts-loader": "^4.4.2",
