--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,8 @@
     "node-static": "^0.7.11",
     "rtcmulticonnection-server": "^1.3.3",
     "vhost": "^3.0.2",
-    "websocket": "^1.0.34"
+    "websocket": "^1.0.34",
+    "nodemailer": "^6.9.4"
   },
   "devDependencies": {
     "eslint": "^8.14.0",
